# corona-framework

./: .gitignore  README.md  agentic-sessions.md  cim-alignment-example.ttl  corona-ASHRAE135ct.ttl  corona-ontology.ttl  corona-shapes.ttl  pyproject.toml  validate_model.py
.github/workflows/: python-test.yml
data/: corona-ontology.ttl  corona-shapes.ttl
examples/: corona-ASHRAE135ct.ttl
src/: constants.py  corona_tool.py  demo_metrics.py  models.py  validate_model.py
tests/: test_models.py  test_validation.py
